--- a/cntryApp/src/app/app.component.html
+++ b/cntryApp/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div class="row mt-4">
   <div class="col-3">
     <!--Side bar-->
-    sidebar
+    <shared-sidebar></shared-sidebar>
   </div>
   <div class="col">
     <!--Paginas-->
-    Router
+    <!-- <shared-home-page></shared-home-page> -->
+    <!-- <shared-about-page></shared-about-page> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
