--- a/cntryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/cntryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,45 @@
-<p>country-page works!</p>
+<ng-template #loading>
+  <div class="alert alert-info">
+    Espere porfavor...
+  </div>
+</ng-template>
+
+<div *ngIf="country; else loading">
+  <div class="row">
+    <div class="col-12">
+      <h2>Pais: <strong>{{country.name.common}}</strong></h2>
+    </div>
+
+    <div class="row">
+      <div class="col-4">
+        <h3>Bandera</h3>
+        <img [src]="country.flags.svg" [alt]="country.name.common" class="img-thumbnail">
+      </div>
+      <div class="col">
+        <h3>Información:</h3>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <strong>Población:</strong> {{country.population | number}}
+          </li>
+          <li class="list-group-item">
+            <strong>Código</strong> {{country.cca3}}
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row mt-2">
+      <div class="col">
+        <h3>Traducciónes</h3>
+        <div class="d-flex flex-wrap">
+          <span class="badge-primary m-1">{{country.translations['ara']?.common}}</span>
+          <span class="badge-primary m-1">{{country.translations['bre']?.common}}</span>
+          <span class="badge-primary m-1">{{country.translations['ces']?.common}}</span>
+          <span class="badge-primary m-1">{{country.translations['cym']?.common}}</span>
+          <span class="badge-primary m-1">{{country.translations['deu']?.common}}</span>
+          <span class="badge-primary m-1">{{country.translations['ita']?.common}}</span>
+        </div>
+      </div>
+    </div>
+
+</div>
