--- a/cntryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/cntryApp/src/app/shared/components/search-box/search-box.component.html
@@ -1,2 +1,9 @@
 <!--Placeholder se recibe como un [argumento]-->
-<input type="text" [placeholder]="placeholder" class="form-control" (keyup.enter)="emitValue(txtInput.value)" #txtInput>
+<!-- (keyup.enter)="emitValue(txtInput.value)" -->
+<input
+  type="text"
+  [placeholder]="placeholder"
+  class="form-control"
+  (keyup)="onKeyPress(txtInput.value)"
+  #txtInput
+/>
