--- a/cntryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/cntryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,16 +1,24 @@
 <h2>Por Región</h2>
-<hr>
+<hr />
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!--Busqueda-->
-    <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por capital"></shared-search-box>
+    <!-- <shared-search-box (onDebounce)="searchByRegion($event)" placeholder="Buscar por capital"></shared-search-box> -->
+    <button
+      *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{'btn-outline-primary': selectedRegion == region}"
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
-<hr>
+<hr />
 
 <div class="row">
   <div class="col">
-        <countries-table [countries]="countries"></countries-table>
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
